Fix button styling on mobile

--- a/style.css
+++ b/style.css
@@ -131,6 +131,10 @@ header {
   width: 100px;
 }
 
+input[type="submit"] {
+  -webkit-appearance: button;
+}
+
 .hidden {
   display: none;
 }
